[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tlk"
version = "0.0.1"
requires-python = ">= 3.7"
authors = [
    {name = 'Andy Mounce', email = 'ammounce@gmail.com'}
    ]
description = "Thorlabs Kinesis python wrappers"
keywords = ["thorlabs", "kinesis", "instrument control" , "science"]

[tool]
